# ros-robotics-2022

./: README.md
project1/: CMakeLists.txt  README.md  package.xml
project1/cfg/: parameters.cfg
project1/csv/: N_calibration.csv  calibration1.csv  calibration2.csv  calibration3.csv
project1/launch/: launcher.launch  launcher1.launch  launcher2.launch  launcher3.launch
project1/msg/: PoseVelSync.msg
project1/python/: N_bag_to_csv.py  N_calibration.py  bag_to_csv.py  calibration.py  calibration_rpm_fixed_N.py
project1/src/: errorComp.cpp  inverter.cpp  odom_pub.cpp  pose_broadcaster.cpp  sub_abs_ref.cpp  synchronizer.cpp  vel_pub.cpp
project1/srv/: reset_odom_to_pose.srv
project2/: CMakeLists.txt  README.md  package.xml
project2/config/: amcl.launch.xml  gmapping.launch.xml  localization_config.rviz  mapping_config.rviz
project2/launch/: localization.launch  mapping.launch  scan_merger.launch
project2/map/: map.pgm  map_with_path2.pgm  map_with_path3.pgm
project2/maps/: map.pgm
project2/scripts/: PGM_processing.py  occupancy_grid_processing.py  sub.py
project2/src/: odom_pub.cpp  odom_tf.cpp  vel_pub.cpp
pub_sub/: CMakeLists.txt  package.xml
pub_sub/launch/: pub_and_sub.launch
pub_sub/src/: pub.cpp  sub.cpp  sub_abs_ref.cpp
